mutants.out/log/src__distill__context_extractor.rs_line_177_col_9.log

*** src/distill/context_extractor.rs:177:9: replace <impl ContextExtractor for HeuristicContextExtractor>::extract -> Result<Context, PortError> with Ok(Default::default())

*** mutation diff:
--- src/distill/context_extractor.rs
+++ replace <impl ContextExtractor for HeuristicContextExtractor>::extract -> Result<Context, PortError> with Ok(Default::default())
@@ -169,17 +169,17 @@
             key_symbols,
             environment_notes,
         }
     }
 }
 
 impl ContextExtractor for HeuristicContextExtractor {
     fn extract(&self, session: &Session) -> Result<Context, PortError> {
-        Ok(Self::extract_context(session))
+        Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
     }
 }
 
 /// Whether a whitespace-delimited token looks like a file path.
 #[must_use]
 fn is_file_path(token: &str) -> bool {
     if token.is_empty() || token.len() < 3 {
         return false;


*** /opt/homebrew/bin/cargo test --no-run --verbose --package=session-ledger@0.1.0
    Blocking waiting for file lock on package cache
       Fresh version_check v0.9.5
       Fresh unicode-ident v1.0.24
       Fresh typenum v1.20.1
       Fresh proc-macro2 v1.0.106
       Fresh memchr v2.8.2
       Fresh time-core v0.1.9
       Fresh quote v1.0.46
       Fresh serde_core v1.0.228
       Fresh libc v0.2.186
       Fresh zmij v1.0.21
       Fresh itoa v1.0.18
       Fresh cfg-if v1.0.4
       Fresh powerfmt v0.2.0
       Fresh num-conv v0.2.2
       Fresh generic-array v0.14.7
       Fresh syn v2.0.118
       Fresh cpufeatures v0.2.17
       Fresh deranged v0.5.8
       Fresh serde_json v1.0.150
       Fresh block-buffer v0.10.4
       Fresh crypto-common v0.1.7
       Fresh thiserror-impl v2.0.18
       Fresh serde_derive v1.0.228
       Fresh time v0.3.51
       Fresh digest v0.10.7
       Fresh serde v1.0.228
       Fresh thiserror v2.0.18
       Fresh sha2 v0.10.9
       Dirty session-ledger v0.1.0 (/private/var/folders/wl/z8733y815nzg28yy0_1_lh7w0000gn/T/cargo-mutants-SessionLedger-Yobutl.tmp): the file `src/distill/context_extractor.rs` has changed (1782977634.242940967s, 7s after last build at 1782977627.481886878s)
   Compiling session-ledger v0.1.0 (/private/var/folders/wl/z8733y815nzg28yy0_1_lh7w0000gn/T/cargo-mutants-SessionLedger-Yobutl.tmp)
     Running `rustc --crate-name session_ledger --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked '--warn=clippy::pedantic' '--deny=clippy::all' --forbid=unsafe_code --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=ac9771b5e95f2e1d -C extra-filename=-88642e5ed190f524 --out-dir /private/var/folders/wl/z8733y815nzg28yy0_1_lh7w0000gn/T/cargo-mutants-SessionLedger-Yobutl.tmp/target/debug/deps -C incremental=/private/var/folders/wl/z8733y815nzg28yy0_1_lh7w0000gn/T/cargo-mutants-SessionLedger-Yobutl.tmp/target/debug/incremental -L dependency=/private/var/folders/wl/z8733y815nzg28yy0_1_lh7w0000gn/T/cargo-mutants-SessionLedger-Yobutl.tmp/target/debug/deps --extern serde=/private/var/folders/wl/z8733y815nzg28yy0_1_lh7w0000gn/T/cargo-mutants-SessionLedger-Yobutl.tmp/target/debug/deps/libserde-1c41851e60a5db1e.rlib --extern serde_json=/private/var/folders/wl/z8733y815nzg28yy0_1_lh7w0000gn/T/cargo-mutants-SessionLedger-Yobutl.tmp/target/debug/deps/libserde_json-831252b49069eef3.rlib --extern sha2=/private/var/folders/wl/z8733y815nzg28yy0_1_lh7w0000gn/T/cargo-mutants-SessionLedger-Yobutl.tmp/target/debug/deps/libsha2-bc6f53d88a65a721.rlib --extern thiserror=/private/var/folders/wl/z8733y815nzg28yy0_1_lh7w0000gn/T/cargo-mutants-SessionLedger-Yobutl.tmp/target/debug/deps/libthiserror-01b248626c37c884.rlib --extern time=/private/var/folders/wl/z8733y815nzg28yy0_1_lh7w0000gn/T/cargo-mutants-SessionLedger-Yobutl.tmp/target/debug/deps/libtime-ee30f8939d83ad23.rlib`
     Running `rustc --crate-name session_ledger --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked '--warn=clippy::pedantic' '--deny=clippy::all' --forbid=unsafe_code --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=eef283a138a36869 -C extra-filename=-d13352b219282d17 --out-dir /private/var/folders/wl/z8733y815nzg28yy0_1_lh7w0000gn/T/cargo-mutants-SessionLedger-Yobutl.tmp/target/debug/deps -C incremental=/private/var/folders/wl/z8733y815nzg28yy0_1_lh7w0000gn/T/cargo-mutants-SessionLedger-Yobutl.tmp/target/debug/incremental -L dependency=/private/var/folders/wl/z8733y815nzg28yy0_1_lh7w0000gn/T/cargo-mutants-SessionLedger-Yobutl.tmp/target/debug/deps --extern serde=/private/var/folders/wl/z8733y815nzg28yy0_1_lh7w0000gn/T/cargo-mutants-SessionLedger-Yobutl.tmp/target/debug/deps/libserde-1c41851e60a5db1e.rmeta --extern serde_json=/private/var/folders/wl/z8733y815nzg28yy0_1_lh7w0000gn/T/cargo-mutants-SessionLedger-Yobutl.tmp/target/debug/deps/libserde_json-831252b49069eef3.rmeta --extern sha2=/private/var/folders/wl/z8733y815nzg28yy0_1_lh7w0000gn/T/cargo-mutants-SessionLedger-Yobutl.tmp/target/debug/deps/libsha2-bc6f53d88a65a721.rmeta --extern thiserror=/private/var/folders/wl/z8733y815nzg28yy0_1_lh7w0000gn/T/cargo-mutants-SessionLedger-Yobutl.tmp/target/debug/deps/libthiserror-01b248626c37c884.rmeta --extern time=/private/var/folders/wl/z8733y815nzg28yy0_1_lh7w0000gn/T/cargo-mutants-SessionLedger-Yobutl.tmp/target/debug/deps/libtime-ee30f8939d83ad23.rmeta`
error[E0277]: the trait bound `context::Context: Default` is not satisfied
   --> src/distill/context_extractor.rs:177:12
    |
177 |         Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
    |            ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `context::Context`
    |
help: consider annotating `context::Context` with `#[derive(Default)]`
   --> src/domain/context.rs:24:1
    |
 24 + #[derive(Default)]
 25 | pub struct Context {
    |

For more information about this error, try `rustc --explain E0277`.
error: could not compile `session-ledger` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `rustc --crate-name session_ledger --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked '--warn=clippy::pedantic' '--deny=clippy::all' --forbid=unsafe_code --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=eef283a138a36869 -C extra-filename=-d13352b219282d17 --out-dir /private/var/folders/wl/z8733y815nzg28yy0_1_lh7w0000gn/T/cargo-mutants-SessionLedger-Yobutl.tmp/target/debug/deps -C incremental=/private/var/folders/wl/z8733y815nzg28yy0_1_lh7w0000gn/T/cargo-mutants-SessionLedger-Yobutl.tmp/target/debug/incremental -L dependency=/private/var/folders/wl/z8733y815nzg28yy0_1_lh7w0000gn/T/cargo-mutants-SessionLedger-Yobutl.tmp/target/debug/deps --extern serde=/private/var/folders/wl/z8733y815nzg28yy0_1_lh7w0000gn/T/cargo-mutants-SessionLedger-Yobutl.tmp/target/debug/deps/libserde-1c41851e60a5db1e.rmeta --extern serde_json=/private/var/folders/wl/z8733y815nzg28yy0_1_lh7w0000gn/T/cargo-mutants-SessionLedger-Yobutl.tmp/target/debug/deps/libserde_json-831252b49069eef3.rmeta --extern sha2=/private/var/folders/wl/z8733y815nzg28yy0_1_lh7w0000gn/T/cargo-mutants-SessionLedger-Yobutl.tmp/target/debug/deps/libsha2-bc6f53d88a65a721.rmeta --extern thiserror=/private/var/folders/wl/z8733y815nzg28yy0_1_lh7w0000gn/T/cargo-mutants-SessionLedger-Yobutl.tmp/target/debug/deps/libthiserror-01b248626c37c884.rmeta --extern time=/private/var/folders/wl/z8733y815nzg28yy0_1_lh7w0000gn/T/cargo-mutants-SessionLedger-Yobutl.tmp/target/debug/deps/libtime-ee30f8939d83ad23.rmeta` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `session-ledger` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `rustc --crate-name session_ledger --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked '--warn=clippy::pedantic' '--deny=clippy::all' --forbid=unsafe_code --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=ac9771b5e95f2e1d -C extra-filename=-88642e5ed190f524 --out-dir /private/var/folders/wl/z8733y815nzg28yy0_1_lh7w0000gn/T/cargo-mutants-SessionLedger-Yobutl.tmp/target/debug/deps -C incremental=/private/var/folders/wl/z8733y815nzg28yy0_1_lh7w0000gn/T/cargo-mutants-SessionLedger-Yobutl.tmp/target/debug/incremental -L dependency=/private/var/folders/wl/z8733y815nzg28yy0_1_lh7w0000gn/T/cargo-mutants-SessionLedger-Yobutl.tmp/target/debug/deps --extern serde=/private/var/folders/wl/z8733y815nzg28yy0_1_lh7w0000gn/T/cargo-mutants-SessionLedger-Yobutl.tmp/target/debug/deps/libserde-1c41851e60a5db1e.rlib --extern serde_json=/private/var/folders/wl/z8733y815nzg28yy0_1_lh7w0000gn/T/cargo-mutants-SessionLedger-Yobutl.tmp/target/debug/deps/libserde_json-831252b49069eef3.rlib --extern sha2=/private/var/folders/wl/z8733y815nzg28yy0_1_lh7w0000gn/T/cargo-mutants-SessionLedger-Yobutl.tmp/target/debug/deps/libsha2-bc6f53d88a65a721.rlib --extern thiserror=/private/var/folders/wl/z8733y815nzg28yy0_1_lh7w0000gn/T/cargo-mutants-SessionLedger-Yobutl.tmp/target/debug/deps/libthiserror-01b248626c37c884.rlib --extern time=/private/var/folders/wl/z8733y815nzg28yy0_1_lh7w0000gn/T/cargo-mutants-SessionLedger-Yobutl.tmp/target/debug/deps/libtime-ee30f8939d83ad23.rlib` (exit status: 1)

*** result: Failure(101)
